<resources>
    <string name="app_name">DroidCafe</string>
    <string name="action_settings">Settings</string>
    <string name="choose_dessert">Choose Dessert</string>
    <string name="donut_desciption">The Donuts Are Glazed</string>
    <string name="ice_description">The ice-cream is delicious</string>
    <string name="froyo_description">this is Frozen Yogurt</string>
    <string name="favorite">favorites</string>
    <string name="order">order</string>
    <string name="status">status</string>
    <string name="order_message">You have selected order</string>
    <string name="status_message"> you have selected status</string>
    <string name="favorites_message">you have selected favorites</string>
    <string name="title_activity_maps">Map</string>
    <string name="donut_order_message">You ordered a donut</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich</string>
    <string name="froyo_order_message">You ordered a froyo</string>
    <string name="choose_a_delivery_method">Choose a delivery method</string>
    <string name="pick_up">Pick Up</string>
    <string name="next_day_delivery">Next day Delivery</string>
    <string name="sameday_delivery">SameDay Delivery</string>
    <string name="Chosen">"Chosen: "</string>
    <string name="nothing_clicked">"onRadioButtonClicked: Nothing clicked."</string>

</resources>



