<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".order_activity">



    <TextView
        android:id="@+id/intro_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="choose delivery method"
        android:textAlignment="center"
        android:textSize="25sp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/intro_text">

        <RadioButton android:id="@+id/sameday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sameday_delivery"
            android:onClick="onRadioButtonClicked">
        </RadioButton>

        <RadioButton android:id="@+id/nextday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_day_delivery"
            android:onClick="onRadioButtonClicked">
        </RadioButton>

        <RadioButton android:id="@+id/pickup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_up"
            android:onClick="onRadioButtonClicked">
        </RadioButton>

    </RadioGroup>
</RelativeLayout>

