<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">
    <ScrollView
        android:layout_width="match_parent"
        android:scrollbars="vertical"

        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/choose_dessert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_dessert"
                android:layout_centerHorizontal="true"
                />

            <ImageView
                android:id="@+id/donut"
                android:layout_below="@id/choose_dessert"
                android:contentDescription="@string/donut_desciption"
                android:layout_width="wrap_content"
                android:onClick="showDonutOrder"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/donut_circle"
                android:padding="10dp"/>

            <TextView
                android:id="@+id/donut_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donut_desciption"
                android:layout_below="@id/choose_dessert"
                android:layout_toRightOf="@id/donut"
                android:layout_toEndOf="@id/donut"/>

            <ImageView
                android:id="@+id/ice_cream"
                android:layout_width="wrap_content"
                android:layout_below="@id/donut"
                android:onClick="showIceCreamOrder"
                android:contentDescription="@string/ice_description"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/icecream_circle"
                android:padding="10dp"/>
            <TextView
                android:id="@+id/ice_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donut_desciption"
                android:layout_below="@id/donut"
                android:layout_toRightOf="@id/ice_cream"
                android:layout_toEndOf="@id/donut"/>

            <ImageView
                android:id="@+id/froyo"
                android:layout_width="wrap_content"
                android:layout_below="@id/ice_cream"
                android:onClick="showFroyoOrder"
                android:contentDescription="@string/froyo_description"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/froyo_circle"
                android:padding="10dp"/>
            <TextView
                android:id="@+id/froyo_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/froyo_description"
                android:padding="@dimen/padding_large"
                android:layout_below="@id/ice_cream"
                android:layout_toRightOf="@id/ice_cream"
                android:layout_toEndOf="@id/donut"/>

        </RelativeLayout>




    </ScrollView>

</RelativeLayout>
